# TheAlmighty

./: CMakeLists.txt  prj.conf
boards/: nrf5340dk_nrf5340_cpuapp.overlay
src/: battery.c  battery.h  biometric.c  biometric.h  emg.c  emg.h  harvest.c  harvest.h  heating.c  heating.h  imu.c  imu.h  mux.c  mux.h  omni_service.c  omni_service.h  pcm.c  pcm.h  pressure.c  pressure.h  spring.c  spring.h  stf.c  stf.h  telemetry.h
